Fix the cropped top of trip list

--- a/frontend/src/components/main/main_page.css
+++ b/frontend/src/components/main/main_page.css
@@ -16,27 +16,19 @@
 
 .item-link:link,
 .item-link:visited {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;  
   color: white;
   font-size: 16px;
   font-weight: 700;
   cursor: pointer;
   border: 0px solid transparent;  
-  text-decoration: none;
-  height: 160px;
-  background: #454545;
-  padding-top: 1.5em;
+  text-decoration: none;  
+  background: #454545;  
   opacity: 0.95;
 }
 
-.item-link {
-  line-height: 20px;  
-  position: relative;
-  min-height: 1px;
+.item-link {   
+  position: relative;  
   z-index: 0;
 }
 
@@ -86,6 +78,7 @@
 .card {
   position: relative;
   cursor: pointer;
+  height: 200px;
 }
 
 .card .face {
@@ -101,12 +94,12 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  transform: translateY(100px); 
+  transform: translateY(100px) scale(1); 
 }
 
 .card:hover .face.face1{
     background: #ff0057;
-    transform: translateY(0);
+    transform: translateY(0) scale(1.1);
 }
 
 .card .face.face1 .content{
@@ -141,12 +134,12 @@
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
-    transform: translateY(-100px);   
+    transform: translateY(-100px) scale(1);   
     
 }
 
 .card:hover .face.face2{
-    transform: translateY(0);
+    transform: translateY(0) scale(1.1);
 }
 
 .card .face.face2 .content p{
